Added players to league and an end point to list them and create new ones.
