# backend/models/season.go
@@ -2,19 +2,21 @@ package models
 
 import (
 	"time"
+
+	"gorm.io/gorm"
 )
 
 type Season struct {
-	ID                uint             `json:"id" gorm:"primaryKey"`
-	Name              string           `json:"name"`
-	DateCreated       time.Time        `json:"dateCreated" gorm:"not null"`
-	LeagueID          uint             `json:"leagueID"`
-	League            League           `json:"league"`
-	CountingGames     int              `json:"countingGames"`
-	EventCount        int              `json:"eventCount"`
-	HasFinals         bool             `json:"hasFinals"`
-	PointDistribution map[string][]int `json:"pointDistribution" gorm:"type:json"`
-	CreatedAt         time.Time        `json:"created_at"`
+	gorm.Model        `swaggerignore:"true"`
+	Name              string               `json:"name"`
+	DateCreated       time.Time            `json:"dateCreated" gorm:"not null"`
+	LeagueID          uint                 `json:"leagueID"`
+	League            League               `json:"league"`
+	CountingGames     int                  `json:"countingGames"`
+	EventCount        int                  `json:"eventCount"`
+	HasFinals         bool                 `json:"hasFinals"`
+	PointDistribution PointDistributionMap `json:"pointDistribution" gorm:"type:json"`
+	CreatedAt         time.Time            `json:"created_at"`
 }
 
 type CreateSeasonRequest struct {
